backend/k8s/base/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "20"
spec:
  tls:
    - hosts: [ "${API_GATEWAY_HOST}" ]
      secretName: api-gateway-tls
  rules:
    - host: ${API_GATEWAY_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
